--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,17 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res/layouts/app_layouts',
+                            'src/main/res/layouts/',
+                            'src/main/res',
+                    ]
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
