--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".cart.CartItemView" />
-        <activity android:name=".app_activities.viewOrder.OrderDetailView"></activity>
+        <activity android:name=".app_activities.viewOrder.OrderDetailView" />
+        <activity android:name=".app_activities.auth.RegistrationActivity"></activity>
     </application>
 
 </manifest>
