--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,22 @@
     package="com.example.android.jindalfresh">
 
     <!-- Include following permission if you load images from Internet -->
-    <uses-permission android:name="android.permission.INTERNET" />
+
     <!-- Include following permission if you want to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +29,25 @@
         android:theme="@style/AppTheme">
         <activity android:name=".app_activities.MainActivity">
 
+        </activity>
+
+        <activity android:name=".app_activities.auth.RegistrationActivity"></activity>
+        <activity android:name=".cart.CartItemView" />
+        <activity android:name=".app_activities.viewOrder.OrderDetailView" />
+        <activity android:name=".app_activities.auth.LoginActivity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".MapsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +55,6 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".app_activities.auth.RegistrationActivity">
-
-        </activity>
-        <activity android:name=".cart.CartItemView" />
-        <activity android:name=".app_activities.viewOrder.OrderDetailView" />
-        <activity android:name=".app_activities.auth.LoginActivity"></activity>
     </application>
 
 </manifest>
