--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".app_activities.MainActivity">
-
-        </activity>
+        <activity android:name=".app_activities.MainActivity"></activity>
         <activity android:name=".app_activities.auth.RegistrationActivity" />
         <activity android:name=".cart.CartItemView" />
         <activity android:name=".app_activities.viewOrder.OrderDetailView" />
@@ -50,12 +48,15 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".MapsActivity" />
         <activity
             android:name=".SpleshScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar">
+
+        </activity>
+        <activity android:name=".app_activities.delivery.deliveryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
