--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".app_activities.MainActivity"></activity>
+        <activity android:name=".app_activities.MainActivity" />
         <activity android:name=".app_activities.auth.RegistrationActivity" />
         <activity android:name=".cart.CartItemView" />
         <activity android:name=".app_activities.viewOrder.OrderDetailView" />
@@ -53,9 +53,7 @@
             android:name=".SpleshScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar">
-
-        </activity>
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity android:name=".app_activities.delivery.deliveryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,6 +61,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app_activities.payment.PaymentOption"></activity>
     </application>
 
 </manifest>
