--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,13 +53,18 @@
             android:name=".SpleshScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" />
-        <activity android:name=".app_activities.delivery.deliveryActivity">
+
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity android:name=".app_activities.delivery.deliveryActivity">
+
         </activity>
         <activity android:name=".app_activities.payment.PaymentOption"></activity>
     </application>
