JK:added logo to splesh Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,21 +52,16 @@
         <activity
             android:name=".SpleshScreen"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name=".app_activities.delivery.deliveryActivity">
-
-        </activity>
-        <activity android:name=".app_activities.payment.PaymentOption"></activity>
+        <activity android:name=".app_activities.delivery.deliveryActivity"></activity>
+        <activity android:name=".app_activities.payment.PaymentOption" />
+        <activity android:name=".app_activities.Welcome"></activity>
     </application>
 
 </manifest>
