JK:changes in view order fragment..made activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,8 +58,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            android:screenOrientation="portrait">
+
         </activity>
-        <activity android:name=".app_activities.delivery.deliveryActivity"></activity>
+        <activity android:name=".app_activities.delivery.deliveryActivity">
+
+        </activity>
         <activity android:name=".app_activities.payment.PaymentOption" />
         <activity android:name=".app_activities.Welcome"></activity>
     </application>
