DJ:  address funtionality added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,9 +59,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app_activities.delivery.deliveryActivity"></activity>
+        <activity android:name=".app_activities.delivery.deliveryActivity" />
         <activity android:name=".app_activities.payment.PaymentOption" />
-        <activity android:name=".app_activities.Welcome"></activity>
+        <activity android:name=".app_activities.Welcome" />
+        <activity android:name=".app_activities.auth.AddressActivity"></activity>
     </application>
 
 </manifest>
